--- a/app/src/main/res/layout/fragment_launch.xml
+++ b/app/src/main/res/layout/fragment_launch.xml
@@ -18,4 +18,11 @@
         android:layout_gravity="center_horizontal"
         android:text="Contacts.Content_FILTER_URI" />
 
+    <Button
+        android:id="@+id/launchExternalButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Launch External" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
