--- a/app/src/main/res/layout/fragment_launch.xml
+++ b/app/src/main/res/layout/fragment_launch.xml
@@ -32,4 +32,11 @@
         android:layout_gravity="center_horizontal"
         android:text="Work Contacts" />
 
+    <Button
+        android:id="@+id/emailField"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="Email Field" />
+
 </androidx.appcompat.widget.LinearLayoutCompat>
